[gd_scene load_steps=8 format=2]

[ext_resource path="res://presentation/slide01/p01_delta.gd" type="Script" id=1]
[ext_resource path="res://presentation/slide01/gui.gd" type="Script" id=2]
[ext_resource path="res://theme/demo_theme.tres" type="Theme" id=3]
[ext_resource path="res://presentation/slide01/demo.gd" type="Script" id=4]
[ext_resource path="res://assets/gray_square.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00246305 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0957031, 0.0957031, 0.0957031, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="p01_delta" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 60.0 ]
}

[node name="gui" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -530.0
texture = SubResource( 2 )
expand = true

[node name="label_process" type="Label" parent="gui"]
margin_left = 360.0
margin_top = 16.0
margin_right = 482.0
margin_bottom = 51.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.647059, 0.647059, 1 )
text = "_process"

[node name="label_physics" type="Label" parent="gui"]
margin_left = 540.0
margin_top = 16.0
margin_right = 781.0
margin_bottom = 51.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.752941, 1, 0.647059, 1 )
text = "_physics_process"

[node name="step" type="LineEdit" parent="gui"]
editor/display_folded = true
margin_left = 50.0
margin_top = 120.0
margin_right = 156.0
margin_bottom = 150.0

[node name="changeStep" type="Button" parent="gui/step"]
margin_left = 110.0
margin_right = 160.0
margin_bottom = 29.0
text = "Set step"

[node name="fps" type="Label" parent="gui"]
margin_left = 50.0
margin_top = 60.0
margin_right = 156.0
margin_bottom = 95.0
theme = ExtResource( 3 )
text = "FPS"

[node name="reset" type="Button" parent="gui"]
margin_left = 50.0
margin_top = 160.0
margin_right = 224.0
margin_bottom = 190.0
text = "Reset squares"

[node name="useDelta" type="CheckBox" parent="gui"]
margin_left = 80.0
margin_top = 200.0
margin_right = 169.0
margin_bottom = 224.0
text = "Use delta"

[node name="demo" type="Node2D" parent="."]
position = Vector2( 10, 10 )
script = ExtResource( 4 )

[node name="red" type="Sprite" parent="demo"]
modulate = Color( 1, 0.701961, 0.701961, 1 )
position = Vector2( 410, 100 )
texture = ExtResource( 5 )

[node name="label" type="Label" parent="demo/red"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -33.5
margin_top = -19.0
margin_right = 33.5
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "1234"
valign = 1

[node name="green" type="Sprite" parent="demo"]
modulate = Color( 0.701961, 1, 0.772549, 1 )
position = Vector2( 660, 96 )
texture = ExtResource( 5 )

[node name="label" type="Label" parent="demo/green"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -33.5
margin_top = -19.0
margin_right = 33.5
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "1234"
valign = 1
[connection signal="pressed" from="gui/step/changeStep" to="." method="_on_changeStep_pressed"]
[connection signal="pressed" from="gui/reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="gui/useDelta" to="." method="_on_useDelta_toggled"]
